Fix Safari overflow issues

--- a/docs/styles/customise.css
+++ b/docs/styles/customise.css
@@ -12,8 +12,8 @@ body {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 
 	overflow: hidden;
 
@@ -27,8 +27,8 @@ main {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 }
 
 @media screen and (max-width: 60rem) {
@@ -54,8 +54,8 @@ main {
 	z-index: 9999;
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 
 	background-color: var(--main-background);
 }
